Mint-X-Gtk3: Fix wrong colored headerbars
Fix a typo in the workaround for gnome-system-monitor that was breaking
the styling for all csd windows.

Closes: https://github.com/linuxmint/mint-themes/issues/238

--- a/src/Mint-X/theme/Mint-X/gtk-3.0/gtk-widgets.css
+++ b/src/Mint-X/theme/Mint-X/gtk-3.0/gtk-widgets.css
@@ -865,7 +865,7 @@ headerbar .subtitle {
 
 /* Workaround for header bars that are moved out of position in apps like
  * gnome-system-monitor in non gnome destkops */
-window.background:not(csd) headerbar {
+window.background:not(.csd) headerbar {
     box-shadow: none;
     background-color: transparent;
     background-image: linear-gradient(to bottom,
@@ -873,7 +873,7 @@ window.background:not(csd) headerbar {
                                       @toolbar_bg_b);
 }
 
-window.background:not(csd) headerbar:backdrop {
+window.background:not(.csd) headerbar:backdrop {
     background-color: transparent;
     background-image: linear-gradient(to bottom,
                                       @toolbar_bg_a,
